--- a/src/main/resources/createWorkout.fxml
+++ b/src/main/resources/createWorkout.fxml
@@ -51,7 +51,7 @@
             </font>
         </Label>
 
-        <Button fx:id="selectWorkOutButton" layoutX="15.0" layoutY="478.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonGreen" text="Toggle completed" onAction="#setCompleted">
+        <Button fx:id="selectWorkOutButton" layoutX="15.0" layoutY="478.0" mnemonicParsing="false" onAction="#setCompleted" prefHeight="35.0" prefWidth="210.0" styleClass="ButtonGreen" text="Toggle completed">
             <font>
                 <Font name="Arial" size="13.0" />
             </font>
@@ -77,12 +77,11 @@
             <children>
                 <TableView fx:id="viewWorkout" editable="true" prefHeight="407.0" prefWidth="445.0" styleClass="TableView">
                     <columns>
-                        <TableColumn fx:id="workoutColum" prefWidth="187.0" sortable="false" text="Workout" />
-                        <TableColumn fx:id="setsColum" prefWidth="81.0" sortable="false" text="Sets" />
-                        <TableColumn fx:id="repsColum" prefWidth="84.0" sortable="false" text="Reps" />
-                        <TableColumn fx:id="weightColum" prefWidth="91.0" sortable="false" text="Weight" />
-                        <TableColumn fx:id="isCompletedColumn" prefWidth="100.0" sortable="false" text="Completed" />
-
+                        <TableColumn fx:id="workoutColum" prefWidth="105.0" sortable="false" text="Workout" />
+                        <TableColumn fx:id="setsColum" prefWidth="68.0" sortable="false" text="Sets" />
+                        <TableColumn fx:id="repsColum" prefWidth="79.0" sortable="false" text="Reps" />
+                        <TableColumn fx:id="weightColum" prefWidth="68.0" sortable="false" text="Weight" />
+                  <TableColumn fx:id="isCompletedColumn" prefWidth="124.0" sortable="false" text="Completed" />
                     </columns></TableView>
             </children>
         </HBox>
