--- a/src/main/resources/trainingApp.css
+++ b/src/main/resources/trainingApp.css
@@ -3,6 +3,8 @@
    -fx-font-family: Calibri;
 }
 
+
+/* Customization of buttons */
 .Button {
     -fx-font-size: 10pt;
     -fx-background-color: #5a85a3;
@@ -25,6 +27,8 @@
     -fx-padding: 10 10 10 10;
 }
 
+
+/* Customization of text field */
 .TextField {
     -fx-background-color: #363636;
     -fx-border-color: #363636;
@@ -38,6 +42,8 @@
     -fx-border-color: #363636;
 }
 
+
+/* Customization of table view */
 .TableView {
     -fx-background-color: #363636;
     -fx-text-fill: white;
@@ -56,7 +62,6 @@
     -fx-text-fill: white;
 }
 
-
 .table-row-cell {
     -fx-background-color: #363636;
     -fx-table-cell-border-color: transparent;
@@ -72,6 +77,32 @@
     -fx-background-color: #73679e;
     -fx-background-insets: 0;
     -fx-background-radius: 1;
+}
+
+
+/* Customization of dialog pane */
+.customDialog{
+    -fx-background-color: #393939;
+}
+.customDialog > *.label.content{
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: white;
+}
+.customDialog:header *.header-panel{
+    -fx-background-color: #202020;
+    -fx-text-fill: white;
+}
+
+.customDialog:header *.header-panel *.label{
+    -fx-font-size: 18px;
+    -fx-text-fill: white;
+}
+
+.customDialog .button {
+    -fx-font-size: 10pt;
+    -fx-background-color: #5a85a3;
+    -fx-text-fill: white;
 }
 
 
