--- a/src/main/resources/application.fxml
+++ b/src/main/resources/application.fxml
@@ -53,7 +53,7 @@
                      <Cursor fx:constant="HAND" />
                   </cursor>
                </Button>
-               <Button fx:id="calculatorButton" layoutX="606.0" layoutY="312.0" mnemonicParsing="false" onAction="#openCalculatorButton" prefHeight="43.0" prefWidth="280.0" styleClass="Button" text="Calculators" textFill="WHITE" wrapText="true" AnchorPane.bottomAnchor="15.0">
+               <Button fx:id="calculatorButton" layoutX="606.0" layoutY="312.0" mnemonicParsing="false" onAction="#openCalculatorButton" prefHeight="43.0" prefWidth="280.0" styleClass="Button" text="One Rep Max Calculator" textFill="WHITE" wrapText="true" AnchorPane.bottomAnchor="15.0">
                   <cursor>
                      <Cursor fx:constant="HAND" />
                   </cursor>
