--- a/src/main/resources/calculateWorkout.fxml
+++ b/src/main/resources/calculateWorkout.fxml
@@ -12,29 +12,22 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </Button>
-        <Label layoutX="13.0" layoutY="11.0" text="Calculators" textFill="WHITE">
+        <Label layoutX="13.0" layoutY="11.0" text="One Rep Max Calculator" textFill="WHITE">
             <font>
                 <Font name="Calibri" size="22.0" />
             </font>
         </Label>
-        <Label layoutX="15.0" layoutY="157.0" prefHeight="17.0" prefWidth="101.0" text="Repetitions:" textFill="WHITE">
+        <Label layoutX="15.0" layoutY="157.0" prefHeight="17.0" prefWidth="260.0" text="Enter the number of repetitions performed" textFill="WHITE">
             <font>
                 <Font name="JetBrains Mono ExtraBold" size="12.0" />
             </font>
         </Label>
         <TextField layoutX="15.0" layoutY="174.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" />
-        <Label layoutX="15.0" layoutY="227.0" prefHeight="17.0" prefWidth="65.0" text="Sets:" textFill="WHITE">
-            <font>
-                <Font name="JetBrains Mono ExtraBold" size="12.0" />
-            </font>
-        </Label>
-        <TextField layoutX="15.0" layoutY="244.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" />
         <Label layoutX="15.0" layoutY="296.0" prefHeight="17.0" prefWidth="79.0" text="Weight:" textFill="WHITE">
             <font>
                 <Font name="JetBrains Mono ExtraBold" size="12.0" />
             </font>
         </Label>
-        <TextField layoutX="15.0" layoutY="313.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" />
         <Button layoutX="15.0" layoutY="404.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="365.0" styleClass="ButtonGreen" text="Calculate">
             <cursor>
                 <Cursor fx:constant="HAND" />
@@ -45,7 +38,7 @@
             </font>
         </Label>
         <TextArea layoutX="521.0" layoutY="35.0" prefHeight="476.0" prefWidth="467.0" styleClass="TextField" AnchorPane.rightAnchor="15.0" />
-        <ChoiceBox layoutX="15.0" layoutY="99.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" />
-        <Label layoutX="15.0" layoutY="82.0" text="Choose values to calculate" textFill="WHITE" />
+        <TextField layoutX="15.0" layoutY="99.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" />
+        <Label layoutX="15.0" layoutY="82.0" text="Enter the weight lifted." textFill="WHITE" />
     </children>
 </AnchorPane>
