Cleaned some code in the main controller and added a more personalized text and accurate date when the user first opens the application.

--- a/src/main/resources/trainingApp.css
+++ b/src/main/resources/trainingApp.css
@@ -19,7 +19,7 @@
 
 .ButtonGreen {
     -fx-font-size: 10pt;
-    -fx-background-color: #73679e;
+    -fx-background-color: #8ab086;
     -fx-text-fill: white;
 }
 
