--- a/src/main/resources/calculateWorkout.fxml
+++ b/src/main/resources/calculateWorkout.fxml
@@ -38,7 +38,7 @@
             </font>
         </Label>
         <TextField fx:id="resultField" layoutX="15.0" layoutY="249" prefHeight="41" prefWidth="365" styleClass="TextField" editable="false"/>
-        <TextArea layoutX="521.0" layoutY="35.0" prefHeight="476.0" prefWidth="467.0" styleClass="TextField" AnchorPane.rightAnchor="15.0" />
+        <TextArea fx:id="aboutText" layoutX="521.0" layoutY="35.0" prefHeight="476.0" prefWidth="467.0" styleClass="TextField" AnchorPane.rightAnchor="15.0" editable="false" />
         <TextField fx:id="enterWeightField" layoutX="15.0" layoutY="99.0" prefHeight="41.0" prefWidth="365.0" styleClass="TextField" promptText="Enter weight" />
         <Label layoutX="15.0" layoutY="82.0" text="Enter the weight lifted." textFill="WHITE" />
     </children>
